--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install Premake
       run: |
         wget https://github.com/premake/premake-core/releases/download/v5.0.0-beta2/premake-5.0.0-beta2-linux.tar.gz -O premake.tar.gz
-        sudo tar -xvf premake.tar.gz --directory=/usr/bin
+        sudo tar -xvf premake.tar.gz
         sudo apt-get update
         sudo apt-get install g++-multilib
         gcc --version
